@@ -1,5 +1,8 @@
 Revision history for AnyEvent::IRC
 
+        - added enable_ssl to AnyEvent::IRC::Connection to enable
+          TLS handshake after TCP connect.
+
 0.7     Wed Jan 21 20:46:39 CET 2009
         - removed autocork hack, as AnyEvent ignores SIGPIPE now.
         - removed maintainer tests from distribution.
